--- a/css/style.css
+++ b/css/style.css
@@ -69,29 +69,8 @@ strong {
     border-radius: 24px;
 }
 
-input {
-    width: 250px;
-    height: 30px;
-    text-align: center;
-}
-
-.rounded {
-    border-radius: 5px;
-}
-
-#languajes {
-    align-self: center;
-    width: 125px;
-    height: 30px;
-}
-
-
-
-#clear {
-    height: 30px;
-    width: 125px;
-    padding: 0;
-    margin: 0;
+select {
+    font-size: 0.8em;
 }
 
 @media only screen and (max-width: 780px) {
